bk_ida/gccida/g3/gen_split_957
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/gen_split_957/src/insn-emit.c:8732:21: error: use of undeclared identifier 'machine_mode'
v1 = gen_lowpart( ( machine_mode)( ( ( BYTE3( target_flags) & 2) != 0) + 4), operands[1]); 
                    ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/gen_split_957/src/insn-emit.c:8736:21: error: use of undeclared identifier 'machine_mode'
v4 = gen_lowpart( ( machine_mode)( !v2 + 4), v3); 
                    ^
2 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/gen_split_957/src/obj/insn-emit.o] Error 1
